All_Component_DX/force-app/main/default/objects/SM_Tier_Usage__c/fields/SM_Calculated_On__c.field-meta.xml
<CustomField>
    <fullName>SM_Calculated_On__c</fullName>
    <description>Date/time when this tier usage line was initiated.</description>
    <inlineHelpText>Date/time when this tier usage line was initiated.</inlineHelpText>
    <label>Calculated On</label>
    <type>DateTime</type>
</CustomField>