All_Component_DX/force-app/main/default/objects/SM_Tier_Usage__c/fields/SM_Committed_On__c.field-meta.xml
<CustomField>
    <fullName>SM_Committed_On__c</fullName>
    <description>Date/time when this tier usage line was confirmed.</description>
    <inlineHelpText>Date/time when this tier usage line was confirmed.</inlineHelpText>
    <label>Committed On</label>
    <type>DateTime</type>
</CustomField>