All_Component_DX/force-app/main/default/objects/SM_Tier_Usage__c/fields/SM_Part__c.field-meta.xml
<CustomField>
    <fullName>SM_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the product used. Is a lookup to an existing salesforce product record</description>
    <inlineHelpText>Name of the product used. Is a lookup to an existing salesforce product record</inlineHelpText>
    <label>Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tier Usages</relationshipLabel>
    <relationshipName>Tier_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>