All_Component_DX/force-app/main/default/objects/SM_Tier_Usage__c/fields/SM_Price__c.field-meta.xml
<CustomField>
    <fullName>SM_Price__c</fullName>
    <description>Price per unit in this tier.</description>
    <inlineHelpText>Price per unit in this tier.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>