All_Component_DX/force-app/main/default/objects/SM_Tier_Usage__c/fields/SM_Tiered_Pricing__c.field-meta.xml
<CustomField>
    <fullName>SM_Tiered_Pricing__c</fullName>
    <description>Tiered Pricing for which this usage is applicable.</description>
    <inlineHelpText>Tiered Pricing for which this usage is applicable.</inlineHelpText>
    <label>Tiered Pricing</label>
    <referenceTo>SM_Tiered_Pricing__c</referenceTo>
    <relationshipLabel>Tier Usages</relationshipLabel>
    <relationshipName>Tier_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>