All_Component_DX/force-app/main/default/objects/SM_Tier_Usage__c/fields/SM_Work_Detail__c.field-meta.xml
<CustomField>
    <fullName>SM_Work_Detail__c</fullName>
    <description>Work Detail for which this usage is applicable.</description>
    <inlineHelpText>Work Detail for which this usage is applicable.</inlineHelpText>
    <label>Work Detail</label>
    <referenceTo>Service_Order_Line__c</referenceTo>
    <relationshipLabel>Tier Usages</relationshipLabel>
    <relationshipName>Tier_Usages</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>